crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_replay_identity_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedReplayIdentity;

fn decode(bytes: &[u8]) {
    let _: UnvalidatedReplayIdentity = serde_json::from_slice(bytes).unwrap();
}

fn main() {}
